# rew

./: .gitignore  .prettierrc.json  Cargo.toml  README.md  WORKSPACE_STRUCTURE.md  build.sh  buildpkg.sh  example.coffee  flake.nix  install-linux.sh  install-windows.ps1  jsconfig.json  main.js  meson.build  node_modules_esbuild_lib_sync_recursive-node_modules_esbuild_lib_sync_recursive_-node_modules-6142f3.out.js  node_modules_esbuild_lib_sync_recursive-node_modules_esbuild_lib_sync_recursive_-node_modules-6142f3.out.js.LICENSE.txt  out.cake  out.js  out.js.LICENSE.txt  out.rew  output.brew  output.cake  package-lock.json  package.json  result  runtime.d.ts  shell.nix  sm.brew  test-all.sh  test_jsx_nested.jsx  test_jsx_nested.rew  todo.txt  tsconfig.json  vendors-node_modules_esbuild_lib_main_d_ts-node_modules_vite_dist_node_index_js.out.js  vendors-node_modules_esbuild_lib_main_d_ts-node_modules_vite_dist_node_index_js.out.js.LICENSE.txt  vendors-node_modules_postcss_lib_postcss_mjs.out.js  vendors-node_modules_postcss_lib_postcss_mjs.out.js.LICENSE.txt  vendors-node_modules_rollup_dist_es_rollup_js.out.js  vendors-node_modules_rollup_dist_es_rollup_js.out.js.LICENSE.txt  vendors-node_modules_rollup_dist_es_shared_watch_js.out.js  (+9 more)
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 7llhfivqb6p30vxia024bv238capi9bz-source
.github/workflows/: git-npm-publish.yml  npm-publish.yaml  npm-publish.yml  publish.yml  release.yml
assets/: runtime.txt
cpp/: ui.cpp  ui2.cpp
deno_webidl/: 00_webidl.js
docs/: app.md  core.md  getting-started.md  index.md  introduction.md  runtime.md
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: style.css
jsx/: Cargo.toml
jsx/src/: lib.rs  main.rs
lib/civet/: main.js
lib/coffeescript/: browser.js  cake.js  coffeescript.js  command.js  grammar.js  helpers.js  index.js  lexer.js  nodes.js  optparse.js  parser.js  register.js  repl.js  rewriter.js  scope.js  sourcemap.js
lib/rew/: main.js  runtime.js
lib/rew/builtins/: all.coffee  conf.coffee  conf.js  encoding.js  ffi.coffee  ffi.js  fs.coffee  fs.js  net.js  os.js  path.js  shell.js  threads.js  types.js  yaml.js
lib/rew/cli/: cli.js  helpers.js  log.js  miscUtils.js  run.js  utils.js
lib/rew/const/: config_path.js  default.js  ext.js  files.js  opt.js  pre-exec.js  stdns.js  usage.js
lib/rew/css/: theme.css
lib/rew/functions/: core.js  curl.js  emitter.js  exec.js  export.js  fs.js  future.js  id.js  import.js  json.js  map.js  match.js  misc.js  path.js  require.js  reval.js  sleep.js  stdout.js  types.js  (+1 more)
lib/rew2/: main.ts
rew-brew/: Cargo.toml
rew-brew/src/: lib.rs
rew-cli/: Cargo.toml
rew-cli/src/: main.rs
rew-compiler/: Cargo.toml
rew-compiler/src/: civet.rs  compiler.rs  jsx.rs  lib.rs
rew-core/: Cargo.toml
rew-core/src/: lib.rs  logger.rs  utils.rs
rew-data-manager/: Cargo.toml
rew-extensions/: Cargo.toml
rew-extensions/src/: lib.rs
rew-extensions/src/ext/: mod.rs
rew-extensions/src/ext/console/: mod.rs
rew-extensions/src/ext/ffi/: mod.rs
rew-extensions/src/ext/http/: 00_serve.ts  init_http.js  mod.rs
rew-extensions/src/ext/os/: init_os.js
rew-extensions/src/ext/process/: init_process.js
rew-extensions/src/ext/telemetry/: mod.rs  telemetry.ts  util.ts
rew-extensions/src/ext/tls/: init_tls.js  mod.rs
rew-extensions/src/ext/url/: mod.rs
rew-extensions/src/ext/web/: init_web.js  mod.rs  permissions.rs
rew-extensions/src/ext/webidl/: init_webidl.js
rew-jsx/: Cargo.toml
rew-jsx/src/: lib.rs
rew-ops/: Cargo.toml
rew-ops/src/: lib.rs
rew-permissions/: Cargo.toml
rew-permissions/src/: lib.rs
rew-pimmy/: Cargo.toml
rew-pimmy/src/: builder.rs  cache.rs  lib.rs  logger.rs  project.rs  repo.rs
rew-qrew/: Cargo.toml
rew-qrew-stub/: Cargo.toml
rew-qrew-stub/src/: main.rs
rew-qrew/src/: main.rs
rew-runtime/: Cargo.toml
rew-runtime-extensions/: Cargo.toml
rew-runtime/js/: main.js  runtime.js
rew-runtime/js/builtins/: all.coffee  ffi.js  fs.js  http.js  path.js  shell.js  testing.js  threads.js  types.js
rew-runtime/src/: builtins.rs  data_manager.rs  lib.rs  ops.rs  runtime.rs  runtime_script.rs  workers.rs
rew-utils/: Cargo.toml
rew-utils/src/: lib.rs
rew-vfile/: Cargo.toml
rew-vfile/src/: lib.rs
rew_bindgen/: Cargo.toml
rew_bindgen/src/: lib.rs  registry.rs
rew_bindgen_macros/: Cargo.toml
rew_bindgen_macros/src/: lib.rs  registry.rs
src/: builtins.rs  civet.rs  compiler.rs  data_manager.rs  declarations.rs  jsx.rs  lib.rs  libloader.rs  loopext.rs  main.js  main.rs  old-main.rs  old_buffer_class.rs  runtime.rs  runtime_script.rs  shell.rs  utils.rs  workers.rs
src/cli/: cli.js  log.js  utils.js
src/const/: default.js
src/css/: theme.css
src/ext/: mod.rs
src/functions/: emitter.js  export.js  future.js  import.js  sleep.js
src/html/: ui.html
src/models/: enum.js  struct.js
src/modules/: compiler.js  context.js  fs.js  runtime.js  yaml.js
src/pkgs/: conf.js  date.js  pkgs.js  ui.js
test/: all.coffee  app.yaml  aug.js  compilation.test.coffee  compile.coffee  d.coffee  data.coffee  e.coffee  emitter.coffee  enum.coffee  error.coffee  exec.coffee  external.coffee  external.test.coffee  ffi.autoload.coffee  ffi.coffee  ffi.test.coffee  fs.coffee  imp.coffee  import.test.coffee  jsx.coffee  jsx.test.coffee  k.coffee  loop.coffee  net.fetch.coffee  net.http.coffee  old.coffee  os.coffee  other.test.coffee  p.coffee  p2.coffee  ptr.coffee  rand.coffee  s.coffee  some.js  some.json  speed.coffee  stf.coffee  test.coffee  test.js  (+6 more)
test/coffee/: all.coffee  aug.coffee  brainak.coffee  conf.coffee  counter.coffee  ctx.coffee  ctx2.coffee  dec.coffee  directives.coffee  f.coffee  fn.coffee  imp.coffee  j.coffee  map.coffee  match.coffee  ns.coffee  other.coffee  p.coffee  print.coffee  req.coffee  s.coffee  sk.coffee  some.coffee  something.yaml  test.coffee  test.js  test.json  test2.coffee  timp.coffee  toor.coffee  tui.coffee  types.coffee  ui.coffee  yaml.coffee  yaml2.yaml
(+85 files in other folders)
