[workspace]
members = [
  "rew-cli",
  "rew-compiler",
  "rew-core",
  "rew-data-manager",
  "rew-extensions",
  "rew-jsx",
  "rew-permissions",
  "rew-runtime",
  "rew-utils",
  "rew-vfile",
  "rew-brew",
  "rew-ops", "rew-pimmy",
]
resolver = "2"

[workspace.package]
authors = ["makano"]
edition = "2024"
license = "MIT"
repository = "https://github.com/kevinj045/rew"
version = "0.0.66"

[workspace.dependencies]
# Workspace Dependencies
rew-cli          = { version = "0.0.66", path = "rew-cli" }
rew-compiler     = { version = "0.0.66", path = "rew-compiler" }
rew-core         = { version = "0.0.66", path = "rew-core" }
rew-data-manager = { version = "0.0.66", path = "rew-data-manager" }
rew-extensions   = { version = "0.0.66", path = "rew-extensions" }
rew-jsx          = { version = "0.0.66", path = "rew-jsx" }
rew-permissions  = { version = "0.0.66", path = "rew-permissions" }
rew_runtime      = { version = "0.0.66", path = "rew-runtime" }
rew-utils        = { version = "0.0.66", path = "rew-utils" }
rew-vfile        = { version = "0.0.66", path = "rew-vfile" }
rew-brew         = { version = "0.0.66", path = "rew-brew" }
rew-ops          = { version = "0.0.66", path = "rew-ops" }
# Common dependencies
anyhow = "1.0.96"
base64 = "0.21.0"
clap = {version = "4.5", features = ["derive"]}
colored = "2.1"
futures = "0.3.31"
lazy_static = "1.4"
once_cell = "1.18"
rand = "0.8"
regex = "1.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "^2.0.3"
tokio = {version = "1.43.0", features = ["full"]}
uuid = {version = "1.4", features = ["v4"]}
libloading = "0.8.9"
sys_traits = "0.1.17"

# Deno
deno_core = "0.354.0"
deno_console = "0.212.0"
deno_error = "0.7.0"
deno_fetch = "0.236.0"
deno_tls = "0.199.0"
deno_ffi = "0.199.0"
deno_fs = "0.122.0"
deno_http = "0.210.0"
deno_io = "0.122.0"
deno_net = "0.204.0"
deno_os = "0.29.0"
deno_permissions = "0.71.0"
deno_process = "0.27.0"
deno_telemetry = "0.34.0"
deno_url = "0.212.0"
deno_web = "0.243.0"
deno_webidl = "0.212.0"
deno_websocket = "0.217.0"

# Platform-specific
libc = {version = "^0.2.168"}
nix = {version = "0.27.1", features = ["signal", "term"]}
rustyline = "=13.0.0"
sha2 = "0.10"
