[package]
name = "rew-extensions"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Deno core extensions for the Rew runtime"

[lib]
name = "rew_extensions"
path = "src/lib.rs"

[dependencies]
deno_core = { workspace = true }
deno_ffi = { workspace = true }
deno_web = { workspace = true }
deno_webidl = { workspace = true }
deno_console = { workspace = true }
deno_url = { workspace = true }
deno_io = { workspace = true }
deno_fs = { workspace = true }
deno_process = { workspace = true }
deno_os = { workspace = true }
deno_fetch = { workspace = true }
deno_net = { workspace = true }
deno_websocket = { workspace = true }
deno_http = { workspace = true }
deno_telemetry = { workspace = true }
deno_permissions = { workspace = true }
deno_error = { workspace = true }
rustyline = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "wincon", "winuser", "fileapi"] }
libc = { workspace = true }