[package]
name = "rew-ops"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Rew OPs"

[dependencies]
rew-core.workspace = true
rew-compiler.workspace = true
rew-extensions.workspace = true
rew-data-manager.workspace = true
rew-permissions.workspace = true
rew-vfile.workspace = true

deno_core = { workspace = true }
deno_permissions = { workspace = true }
deno_fs = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
rustyline = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
libc = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
deno_io = { workspace = true }
libloading = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "wincon", "winuser", "fileapi"] }
