[package]
name = "rew-pimmy"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rew-core.workspace = true
rew_runtime.workspace = true

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
colored = { workspace = true }

fs_extra = "1.3.0"
indicatif = "0.18.0"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking"] }
zip = "2.2.0"
flate2 = "1.0.33"
tar = "0.4.42"
chrono = { version = "0.4.38", features = ["serde"] }