[package]
name = "rew_runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
# readme = "../README.md"
keywords = ["rew", "coffeescript", "runtime", "compiler"]
categories = ["command-line-utilities"]
description = "JavaScript/CoffeeScript runtime based on deno_core"
# include = [
#   "src/**",
#   "js/**",
#   "Cargo.toml",
#   "../README.md",
# ]

[lib]
name = "rew_runtime"
path = "src/lib.rs"

[dependencies]
rew-core.workspace = true
rew-compiler.workspace = true
rew-extensions.workspace = true
rew-data-manager.workspace = true
rew-ops.workspace = true
rew-permissions.workspace = true
rew-brew.workspace = true
rew-utils.workspace = true
rew-vfile.workspace = true

deno_core = { workspace = true }
deno_permissions = { workspace = true }
deno_fs = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
rustyline = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
libc = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
deno_io = { workspace = true }
